<resources>
    <string name="app_name">颜究院</string>
    <string name="company_copyright">©厦门爱游米网络科技有限公司 2017</string>
    <string name="text_add_bill_remark">添加备注</string>
    <string name="text_date">%1$04d-%2$02d-%3$02d</string>
    <string name="text_male">男</string>
    <string name="text_female">女</string>
    <string name="text_null">无</string>
    <string name="text_benefits_status"><![CDATA[%1$s：<font color="#FF7069">%2$s</font>]]></string>
    <string name="text_discover">发现</string>
    <string name="text_discover_brand">品牌大全</string>
    <string name="text_hot_article">热门文章</string>
    <string name="text_to_more">查看更多></string>
    <string name="text_more">更多</string>
    <string name="text_add_comment">发评论</string>
    <string name="text_article_detail">文章详情</string>
    <string name="text_evaluate_detail">回复详情</string>
    <string name="text_evaluate_reply_from"><![CDATA[<font color="#32DAC3">%1$s</font>：%2$s]]></string>
    <string name="text_evaluate_reply_to"><![CDATA[回复<font color="#32DAC3">%1$s</font>：%2$s]]></string>
    <string name="text_article_evaluate">评论(%d)</string>
    <string name="text_brand">品牌</string>
    <string name="text_brand_list">品牌列表</string>
    <string name="text_product">产品</string>
    <string name="text_component">成分</string>
    <string name="text_compare_price">比价</string>
    <string name="text_evaluate">评价</string>
    <string name="text_product_spec">￥%1$s/%2$s</string>
    <string name="text_product_no_spec">￥%1$s%2$s</string>
    <string name="text_expiration_date">过期时间</string>
    <string name="text_is_open">是否开封</string>
    <string name="text_open_time">开封日期</string>
    <string name="text_expiration_opened">开封保质期</string>
    <string name="text_expiration_opened_intro">开封保质期说明</string>
    <string name="text_image">图片</string>
    <string name="text_empty_evaluate_list">快来抢沙发，消灭零回复</string>
    <string name="text_me_star">我收藏的</string>
    <string name="text_skin_test">肤质测试</string>
    <string name="text_query_production_date">批号查询</string>
    <string name="text_production_date">生产日期查询 > </string>
    <string name="text_query_instructions">查询说明</string>
    <string name="text_query_title_1">什么是批号？</string>
    <string name="text_query_content_1">护肤品批号是生产商/品牌商用于记录产品生产日期、产地、生产批次等信息的重要手段，我们也可以通过查询批号信息获取最准确的生产信息~</string>
    <string name="text_query_title_2">我在哪里能看到批号？</string>
    <string name="text_query_content_2">一般批号会印刷在容器底部、管尾，你也可以在外盒底部或者背面找到生产批号。\n例如瓶装产品，批号通常印刷在底部：</string>
    <string name="text_query_content_2_2">例如管状产品，批号通常采用压印在头部：</string>
    <string name="text_query_title_3">查询的到批号的产品一定是正品吗？</string>
    <string name="text_query_content_3">不一定，因为同一批产品用的是同一个批号，这个批号有可能被造厂商大量复制</string>
    <string name="text_query_title_4">颜究院提供的过期日期是否准确？</string>
    <string name="text_query_content_4">由于不知道每个用户查询的是什么产品，所以颜究院提供的是一个通用的3年标准（该标准来源于日本药事法规定，以3年不变质为最低限）。\n\n但是每个产品都有一个建议开封使用时间，印刷在瓶身，建议以每个产品为标准哦~\n\n同时，您也可以在颜究院记录开封时间，在使用日期到之前，我们会提醒您哦~</string>
    <string name="text_query_instruction">批号说明</string>
    <string name="text_add_product_repository">我的护肤品库</string>
    <string name="text_empty_article_list">没有内容咯！\n热情好学颜究生，我就服你~</string>
    <string name="text_empty_ask_list">用过的人正赶来回答~</string>
    <string name="text_other_way">其他方式</string>
    <string name="text_forgot_password">忘记密码</string>
    <string name="text_product_count"><![CDATA[
        收录<font color="#32DAC3">%d</font>种护肤品的成分和功效
    ]]></string>
    <string name="text_taobao">淘宝网</string>
    <string name="text_jingdong">京东</string>
    <string name="text_amazon">亚马逊</string>
    <string name="text_profile">个人资料</string>
    <string name="text_avatar">头像</string>
    <string name="text_username">用户名</string>
    <string name="text_mobile">手机号码</string>
    <string name="text_birthday">生日</string>
    <string name="text_area">地区</string>
    <string name="text_logout">退出登录</string>
    <string name="text_delete">删除</string>
    <string name="text_close">关闭</string>
    <string name="text_face_score">颜值</string>
    <string name="text_title_template">功课模板</string>
    <string name="text_search_count"><![CDATA[共为您找到<font color="#32DAC3">%d</font>款产品]]></string>
    <string name="text_apply_all_image">将滤镜应用到模板中的所有图片</string>
    <string name="text_commend_star">推荐指数</string>
    <string name="text_template_title">快速生成护肤功课</string>
    <string name="text_template_0_header">眼霜合集</string>
    <string name="text_template_0_title">质地偏固态，涂开是他家招牌的滋润+油润感。\n很好涂开，但是对我来说不好吸收，会有点吃不进皮肤一直浮在眼周的感觉。\n使用感很像同为资生堂的百优，但是这个价格跟百优差非常多= =\n值得表扬的是它的鸭嘴系列，很卫生，不容易让产品发生变质。</string>
    <string name="text_template_0_product">美丽芳丝保湿修复柔润化妆水</string>
    <string name="text_template_0_price">参考价格：</string>
    <string name="text_template_0_spec">1000RMB/15g</string>
    <string name="text_template_0_content">质地偏固态，涂开是他家招牌的滋润+油润感。\n\n很好涂开，但是对我来说不好吸收，会有点吃不进皮肤一直浮在眼周的感觉。\n\n使用感很像同为资生堂的百优，但是这个价格跟百优差非常多= =\n\n值得表扬的是它的鸭嘴系列，很卫生，不容易让产品发生变质。</string>
    <string name="text_template_1_title">YSL  唇釉   407</string>
    <string name="text_template_1_desc">YSL ROUGE PUR COUTURE THE MATS</string>
    <string name="text_template_1_content">最近最迷的奶茶裸橘粉色，再次强调我的深唇，我素唇是灰紫调的，所以歪打正着这只涂我嘴上不算太浅。\n\n相比较香奈儿174这只更明丽一些，灰调少很多（手臂对比我发评论）。我用还挺提气色的，因为有粉调，但又不会过度粉嫩更不会芭比~</string>
    <string name="text_template_2_title">安娜柏林 橙花蜜原液</string>
    <string name="text_template_2_content">【肤质】PO主混油，很少过敏，定居南方。\n\n【价格】这款原价20多欧，闺蜜在德国读研，趁打折的时候买的，寄回来188！！作为一个中高端有机护肤品牌，真的算得上便宜大碗了！\n\n【使用感】主打保湿美白。橙花的味道很天然，每次用都觉得非常享受！对于混油来说，秋冬用也不会很油。可能夏天用就会油了！三个月空瓶，对于改善肤色不均很有效果，感觉整个皮肤都提亮了~</string>
    <string name="text_template_3_header">防晒霜小测评</string>
    <string name="text_template_3_title">安耐晒银瓶</string>
    <string name="text_template_3_content">小银瓶对比小金瓶更加适合脸部使用\n质地相对比较稀，挤出来更像乳液\n刚上脸的时候有油腻感\n不过很快就吸收了个人感觉更适合干皮</string>
    <string name="text_template_4_product">美宝莲毛孔隐形妆前乳</string>
    <string name="text_template_4_title">1000元搞定全套彩妆</string>
    <string name="text_template_4_brand">美宝莲（Maybelline）</string>
    <string name="text_template_4_cate">状前乳</string>
    <string name="text_template_4_price">￥89.00</string>
    <string name="text_template_4_content">美宝莲这款产品，号称毛孔橡皮擦~\n啫喱质感，清清爽爽，效果是立竿见影的好！\n两颊毛孔立马消失，而且一天下来也完全不会显油腻。</string>
    <string name="text_template_5_desc">薄涂有点像樱花粉，厚涂是偏玫瑰的水红色\n完全不显唇纹，滋润度很高，除了贵，没其他毛病</string>
    <string name="text_template_5_content">最近最迷的奶茶裸橘粉色，再次强调我的深唇，我素唇是灰紫调的，所以歪打正着这只涂我嘴上不算太浅。\n\n相比较香奈儿174这只更明丽一些，灰调少很多（手臂对比我发评论）。我用还挺提气色的，因为有粉调，但又不会过度粉嫩更不会芭比~</string>
    <string name="text_ask_all">全部问答</string>
    <string name="text_ask_product_name"><![CDATA[关于<font color="#222222">%s</font>的问题]]></string>
    <string name="text_ask_detail">问题详情</string>
    <string name="text_ask_list_empty">暂无问题，我来提一个吧</string>
    <string name="text_ask">问</string>
    <string name="text_answer">答</string>
    <string name="text_view_more_answer">查看%d个回答</string>
    <string name="text_to_ask_used">向用过的人提问</string>
    <string name="text_to_answer">去回答 ></string>
    <string name="text_no_answer">暂无回答</string>
    <string name="text_message_ask">有问题向您求助哦~</string>
    <string name="text_message_answer">回答了您的问题哦~</string>
    <string-array name="text_home_buttons">
        <item>@string/btn_main_product</item>
        <item>@string/btn_me_used</item>
        <item>@string/text_query_production_date</item>
        <item>@string/text_home_benefits</item>
    </string-array>
    <string-array name="text_home_buttons_desc">
        <item>最全的护肤品库</item>
        <item>记录产品的使用</item>
        <item>护肤品的生产日期</item>
        <item>大牌奖品0元送</item>
    </string-array>
    <string name="text_home_benefits">免费福利</string>
    <string name="text_home_ask_title">有人向你提问</string>
    <string name="text_home_ask_total"><![CDATA[
        <u>共%d条回答</u>
    ]]></string>
    <string name="text_set_password">设定密码</string>
    <string name="text_login_or_register">登录/注册</string>
    <string name="text_my_ask">我的提问</string>
    <string name="text_my_answer">我的回答</string>
    <string name="text_tmshuo">tmshuo520</string>
    <string name="text_not_update">好赞，当前已是最新版本</string>
    <string name="text_evaluate_good">好评</string>
    <string name="text_evaluate_middle">中评</string>
    <string name="text_evaluate_bad">差评</string>
    <string name="text_my_skin">我的肤质</string>
    <string name="text_skin_test_start">开始肤质测试 >></string>
    <string name="text_my_skin_detail">查看我的肤质情况 >></string>
    <string name="text_skin_wiki">护肤科普</string>
    <string name="text_last_ask">最新问答</string>
    <string name="text_max_word">0/30</string>
    <string name="text_export">导出</string>
    <string name="text_edit">编辑</string>
    <string name="text_remain_days">剩余天数</string>
    <string name="text_title_export_used">我在用什么?</string>
    <string name="text_month_3">3个月</string>
    <string name="text_month_6">6个月</string>
    <string name="text_month_12">12个月</string>
    <string name="text_month_24">24个月</string>
    <string name="text_custom_time">自定义时间</string>
    <string name="text_unit_day">天 ?</string>
    <string name="text_component_num"><![CDATA[含有该成分产品：<font color="#222222">%d</font>]]></string>
    <string name="text_message_delete">是否确认删除</string>
    <string name="label_batch_no">批号：%s</string>
    <string name="label_mfg_date">生产日期：</string>
    <string name="label_expiration_date">过期日期：</string>
    <string name="label_looking_value"><![CDATA[颜值：<font color="#fdff00">%s&#160;</font>分]]></string>
    <string name="label_face_score">您的颜值总分为：</string>
    <string name="label_benefit_sum"><![CDATA[份数：<font color="#FF7069">%s&#160;</font> 份]]></string>
    <string name="label_benefit_countdown"><![CDATA[距离开始：<font color="#FF7069">%s&#160;</font>]]></string>
    <string name="btn_main_product">产品库</string>
    <string name="btn_main_me">我的</string>
    <string name="btn_star">收藏</string>
    <string name="btn_comment">点评</string>
    <string name="btn_publish">发布</string>
    <string name="btn_share">分享</string>
    <string name="btn_save">保存</string>
    <string name="btn_home">首页</string>
    <string name="btn_query_batch">查批号</string>
    <string name="btn_query_now">立即查询</string>
    <string name="btn_me_used">我在用的</string>
    <string name="btn_me_bills">我的清单</string>
    <string name="btn_me_like">我长草的</string>
    <string name="btn_wx_account">官方微信</string>
    <string name="btn_commend_app">推荐颜究院</string>
    <string name="btn_to_market">给颜究院打分</string>
    <string name="btn_get_captcha">获取验证码</string>
    <string name="btn_from_camera">拍照</string>
    <string name="btn_from_gallery">从相册中上传</string>
    <string name="btn_to_bind">去绑定</string>
    <string name="btn_next_time">下次再说</string>
    <string name="btn_i_know">我知道了</string>
    <string name="hint_brand_name">请输入品牌名称</string>
    <string name="hint_product_code">请输入产品批号</string>
    <string name="hint_mobile">请输入手机号</string>
    <string name="hint_password">请输至少6位数的密码</string>
    <string name="hint_captcha">请输入短信验证码</string>
    <string name="text_test_info">基础信息</string>
    <string name="text_test_front_info">开始测试前,请先填写您的基础信息</string>
    <string name="text_test_birthday">点击选择出生日期</string>
    <string name="text_test_into">进入测试</string>
    <string name="tv_test_which">干性/油性皮肤中,您属于哪种?</string>
    <string name="tv_test_height_dry">重度干性皮肤</string>
    <string name="tv_test_low_dry">轻度干性皮肤</string>
    <string name="tv_test_low_oily">轻度油性皮肤</string>
    <string name="text_test_height_oily">重度油性皮肤</string>
    <string name="text_why_bind_mobile_title">为什么要绑定手机号</string>
    <string name="text_why_bind_mobile">&#160;&#160;&#160;&#160;根据国家网络信息办公室颁布的《移动互联网应用程序信息服务管理规定》&#160;从2016年8月1日起，互联网注册用户应当提供基于移动电话号码等方式的真实身份信息，所以需要你绑定手机号码。</string>
    <string name="text_no_bind_mobile">您还没有绑定手机号</string>
    <string name="text_desc_bind_mobile">绑定手机后，可以用手机号\n登录颜究院</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_share_content">分享内容到</string>
    <string name="tv_share_wxfriend">微信好友</string>
    <string name="tv_share_wxcircle">朋友圈</string>
    <string name="tv_share_weibo">微博</string>
</resources>