<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include layout="@layout/include_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        >

        <TextView
            android:id="@+id/tv_query_code_brand"
            style="@style/BaseInputLarge"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/bg_round_stroke_window"
            android:hint="@string/hint_brand_name"
            />

        <EditText
            android:id="@+id/et_query_code_product"
            style="@style/BaseInputLarge"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@drawable/bg_round_stroke_window"
            android:hint="@string/hint_product_code"
            />

        <TextView
            android:id="@+id/tv_query_code_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="10dp"
            android:text="@string/text_query_instruction"
            />

        <Button
            android:id="@+id/btn_query_code_submit"
            style="@style/BaseButtonLarge"
            android:background="@drawable/btn_round_primary_selector"
            android:text="@string/btn_query_now"
            android:enabled="false"
            />

    </LinearLayout>

</FrameLayout>