<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius_white_small"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:layout_marginTop="30dp"
        android:text="@string/text_no_bind_mobile"
        android:textAppearance="@style/TextTitle"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:lineSpacingExtra="2dp"
        android:text="@string/text_desc_bind_mobile"
        android:textColor="@color/textSecondary"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divEvaluate"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@id/btn_dialog_negative"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/btn_next_time"
            android:textColor="@color/textSecondary"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divEvaluate"
            />

        <Button
            android:id="@id/btn_dialog_positive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/btn_to_bind"
            android:textColor="@color/colorPrimary"
            />

    </LinearLayout>

</LinearLayout>