<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_share_window"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="bottom"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <View
            style="@style/ItemLineHeight"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="23dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_share_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tv_share_content"
            android:textSize="@dimen/text_size_small_16"/>

        <View
            style="@style/ItemLineHeight"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="38dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_share_wx_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/ic_wx_firend"
            android:gravity="center"
            android:text="@string/tv_share_wxfriend"/>

        <TextView
            android:id="@+id/tv_share_wx_circle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/ic_wx_circle"
            android:gravity="center"
            android:text="@string/tv_share_wxcircle"/>

        <TextView
            android:id="@+id/tv_share_weibo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/ic_weibo"
            android:gravity="center"
            android:text="@string/tv_share_weibo"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_share_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/fed"
        android:gravity="center"
        android:text="@string/tv_cancel"
        android:textSize="@dimen/text_size_small_16"
        />

</LinearLayout>