<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="305dp"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    >

    <ImageView
        android:id="@+id/iv_test_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="end"
        android:padding="@dimen/spacing_normal"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_dialog_close"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/text_test_info"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_size_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_test_front_info"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/text_size_small_13"/>

        <TextView
            android:id="@+id/tv_test_select_birthday"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_round_stroke_div"
            android:gravity="center"
            android:text="@string/text_test_birthday"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/text_size_small_14"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/rb_test_man"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/btn_male_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/text_male"
                android:textColor="@color/secondary2white"
                android:textStyle="bold"
                />

            <RadioButton
                android:id="@+id/rb_test_woman"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/btn_female_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/text_female"
                android:textColor="@color/secondary2white"
                android:textSize="@dimen/text_size_small_16"
                android:textStyle="bold"
                />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_test_into"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_shape_main_color_white"
            android:gravity="center"
            android:text="@string/text_test_into"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_body_material"
            />

    </LinearLayout>

</RelativeLayout>