<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_pick_from_gallery"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/btn_from_gallery"
        android:textColor="@color/text_black_secondary"
        android:textSize="@dimen/text_size_body_material"
        />

    <Button
        android:id="@+id/btn_pick_from_camera"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/btn_from_camera"
        android:textColor="@color/text_black_secondary"
        android:textSize="@dimen/text_size_body_material"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_normal"/>

    <Button
        android:id="@+id/btn_pick_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/tv_cancel"
        android:textColor="@color/text_black_secondary"
        android:textSize="@dimen/text_size_body_material"
        />

</LinearLayout>