<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:layout_marginTop="30dp"
        android:text="@string/text_why_bind_mobile_title"
        android:textAppearance="@style/TextTitle"
        />

    <TextView
        android:id="@+id/tv_bind_mobile_why"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:lineSpacingExtra="2dp"
        android:text="@string/text_why_bind_mobile"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/text_size_body_material"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divEvaluate"
        />

    <Button
        android:id="@+id/btn_bind_mobile_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:text="@string/btn_i_know"
        android:textColor="@color/colorPrimary"
        />

</LinearLayout>